--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.61.1",
-    "@google-analytics/data": "^5.2.1",
     "dotenv": "^17.3.1",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-ga4": "^2.1.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.25.5",
